<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="13"
    android:id="@+id/ll_main"
    android:background="@color/crmbackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:id="@+id/ll_line1"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/date"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                />


            <EditText
                android:id="@+id/txtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:padding="5dp"
                android:textSize="14dp"
                android:gravity="center"
                android:hint="@string/date"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:id="@+id/tvTableNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tableno"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/txtTableNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:padding="5dp"
                android:textSize="14dp"
                android:gravity="center"
                android:hint="@string/tableno" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:layout_weight="4">


            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/name"
                android:paddingLeft="5dp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                />


            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:padding="5dp"
                android:textSize="14dp"
                android:hint="@string/name"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:layout_weight="4">


            <TextView
                android:id="@+id/tvContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/contact"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:paddingLeft="5dp" />

            <EditText
                android:id="@+id/txtContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:padding="5dp"
                android:textSize="14dp"
                android:hint="@string/contact" />

        </LinearLayout>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_weight="5"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/ll_feedback_main"
        android:background="@color/crmbackground"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical"
            android:layout_weight="2"

            >

            <TextView
                android:id="@+id/txtFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Food"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"
                android:textSize="20dp"
                />

            <RatingBar
                android:id="@+id/foodrating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:numStars="5"
                android:stepSize="0.5"
                android:rating="0"
                android:theme="@style/RatingBar"
                android:isIndicator="false"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical"
            android:layout_weight="2"

            >

            <TextView
                android:id="@+id/Service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Service"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"
                android:textSize="20dp"
                />


            <RatingBar
                android:id="@+id/servicerating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:numStars="5"
                android:stepSize="0.5"
                android:rating="0"
                android:theme="@style/RatingBar"
                android:isIndicator="false"
                />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_weight="2"
        android:weightSum="2"
        android:id="@+id/ll_savecancel"
        >

        <Button
            android:id="@+id/cmdUpdate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="Update"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/cmdCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="Cancel"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textAlignment="center"
            />


    </LinearLayout>
</LinearLayout>